--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "fast-average-color": "^9.3.0",
     "html2canvas": "^1.4.1",
+    "vue-multiselect": "^3.2.0",
     "pinia": "^2.0.21",
-    "vue": "^3.2.38",
+    "vue": "^3.5.13",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
