--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "review": "vite build && vite preview --port 4173 --host",
     "preview": "vite preview --port 4173",
     "previewHost": "vite preview --port 4173 --host",
-    "test:unit": "vitest --environment jsdom",
+    "test:unit": "vitest run --environment jsdom",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
