--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "considerations",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "devHost": "vite --host",
@@ -10,30 +11,31 @@
     "preview": "vite preview --port 4173",
     "previewHost": "vite preview --port 4173 --host",
     "test:unit": "vitest run --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "fast-average-color": "^9.3.0",
     "html2canvas": "^1.4.1",
-    "vue-multiselect": "^3.2.0",
-    "pinia": "^2.0.21",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.1.5"
+    "vue-multiselect": "^3.2.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@rushstack/eslint-patch": "^1.11.0",
+    "@types/node": "^20.14.15",
     "@vitejs/plugin-basic-ssl": "^0.1.2",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.0.2",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-vue": "^10.0.0",
     "jsdom": "^20.0.0",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.4.4",
-    "vite": "^3.0.9",
-    "vitest": "^0.23.0"
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.2",
+    "vitest": "^2.0.2",
+    "vue-tsc": "^2.0.6"
   }
 }
