--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "vite": "^5.4.2",
     "vitest": "^2.0.2",
     "vue-tsc": "^2.0.6"
+  },
+  "resolutions": {
+    "esbuild": "^0.25.0"
   }
 }
