--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-average-color": "^9.3.0",
     "html2canvas": "^1.4.1",
     "pinia": "^3.0.2",
+    "typescript-eslint": "^8.29.1",
     "vue": "^3.5.13",
     "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0"
