--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "fast-average-color": "^9.3.0",
     "html2canvas": "^1.4.1",
     "pinia": "^3.0.2",
-    "typescript-eslint": "^8.29.1",
     "vue": "^3.5.13",
     "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0"
@@ -32,11 +31,14 @@
     "@vue/test-utils": "^2.0.2",
     "eslint": "^9.24.0",
     "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "jsdom": "^20.0.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.29.1",
     "vite": "^5.4.2",
     "vitest": "^2.0.2",
+    "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "^2.0.6"
   },
   "resolutions": {
