--- a/package.json
+++ b/package.json
@@ -14,33 +14,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.12",
+    "@tailwindcss/vite": "^4.1.18",
     "fast-average-color": "^9.3.0",
     "html2canvas": "^1.4.1",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.18",
+    "pinia": "^3.0.4",
+    "vue": "^3.5.28",
     "vue-multiselect": "^3.3.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.12.0",
+    "@rushstack/eslint-patch": "^1.15.0",
     "@types/node": "^20.14.15",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "^6.0.4",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.33.0",
-    "eslint-plugin-vue": "^10.4.0",
-    "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "eslint-plugin-vue": "^10.8.0",
+    "eslint-plugin-vuejs-accessibility": "^2.5.0",
     "jsdom": "^20.0.0",
-    "tailwindcss": "^4.1.12",
-    "typescript": "^5.9.2",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.40.0",
-    "vite": "^7.1.3",
-    "vitest": "^3.2.4",
-    "vue-eslint-parser": "^10.2.0",
-    "vue-tsc": "^3.0.5"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18",
+    "vue-eslint-parser": "^10.4.0",
+    "vue-tsc": "^3.2.4"
   },
   "resolutions": {
-    "esbuild": "^0.25.0"
+    "esbuild": "^0.25.0",
+    "tar": "^7.5.7",
+    "lodash": "^4.17.23",
+    "js-yaml": "^4.1.1",
+    "glob": "^10.5.0"
   }
 }
