--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tar": "^7.5.7",
     "lodash": "^4.17.23",
     "js-yaml": "^4.1.1",
-    "glob": "^10.5.0"
+    "glob": "^10.5.0",
+    "form-data": "^4.0.4"
   }
 }
